# cmake_skeleton

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: uninstall.cmake.in
include/myproject/: math_utils.hpp
src/: main.cc  math_utils.cc
tests/: math_utils_test.cc
